--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pos</title>
+    <title>POS System</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +9,32 @@
   </head>
 
   <body>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Sale</a>
+            </div>
+             <ul class="nav navbar-nav">
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                 <% if user_signed_in? %>
+                 <li><%= link_to current_user.email, edit_user_registration_path %></li>
+                 <li><%= link_to "Log Out" , destroy_user_session_path, method: :delete %></li>
+                 <% else %>
+                 <li><%= link_to "Sign In", user_session_path %></li>
+                 <li><%= link_to "Register", new_user_registration_path %></li>
+                 <% end %>
+              </ul>
+            </div>
+        </div>
+      <div class="container">
+         <% flash.each do |type, message| %>
+         <div class="alert <%= flash_class type %> alert-dismissable">
+           <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+           <p><%= message %></p>
+         </div>
+         <% end %>
+     </div>
     <%= yield %>
   </body>
 </html>
