--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,13 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
+<h1>Listing Products</h1>
 
  <table class="table table-striped">
   <thead>
     <tr>
-      <th>Code</th>
       <th>Name</th>
+      <th>Code</th>
       <th>Price</th>
+      <th></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,8 +16,8 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
-        <td><%= product.code %></td>
         <td><%= product.name %></td>
+        <td><%= product.code %></td>
         <td><%= product.price %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
